<resources>
    <string name="app_name">SportsApp</string>
    <string name="buttonSignIn">Sign in</string>
    <string name="buttonSignUp">Sign up</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="descriptionLogo">Main logo</string>
    <string name="title_activity_main">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="memories">Memories</string>
    <string name="map">Map</string>
    <string name="current_events">Current Events</string>
    <string name="logout">Log out</string>
    <string name="editProfile">Edit Profile</string>
    <string name="other">Other</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintRepeatePassword">Repeat password</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="Event">Event</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_new_event">New event</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sc_air_sports">Air sports</string>
    <string name="sc_archery">Archery</string>
    <string name="sc_ball_over_net_games">Ball-over-net games</string>
    <string name="choose_category">Choose category</string>
    <string name="hintNewEventDescription">For example, is there any restriction on the number of people or should visitors take anything with them, as well as what do you expect from the event</string>
    <string name="describe_event">Describe event</string>
    <string name="time_and_date">Time and date</string>
    <string name="create_an_event">create an event</string>
    <string name="see_how_it_will_look_like">see how it will look like</string>
    <string name="confirmation_of_an_event">Confirmation of an event</string>
    <string name="activity_settings_choose_category">Select the categories you want to see on the map</string>
    <string name="choose_category_to_see_on_map">What categories do you want to see on the main map</string>
    <string name="facebook_app_id">171845167001767</string>
    <string name="fb_login_protocol_scheme">fb171845167001767</string>
    <string name="doNotEnterEmailAndPass">You have not entered all the required login information</string>
    <string name="passToShort">Password is too short</string>
    <string name="incorrectData">The data was entered incorrectly</string>
    <string name="allFieldsMustBeFilledIn">All fields must be filled in</string>
    <string name="passNotTheSame">Passwords are not the same</string>
    <string name="emptyString"></string>
    <string name="emailNotVerified">Email is not verified yet. Check your email</string>
    <string name="checkEmailToConfirm">Check your email to confirm it</string>
    <string name="errorHasOccurred">An error has occurred. Try again</string>
    <string name="emailDoNotExist">Email does not exist or disabled</string>
    <string name="wrongPassword">Password is wrong</string>
    <string name="weakPassword">The password is not strong enough</string>
    <string name="malformedEmail">The email address is malformed</string>
    <string name="emailIsTaken">An account with the given email address has already exist</string>
    <string name="change_photo">Change Photo</string>
    <string name="photoChangedSuccessfully">Profile photo has been changed successfully</string>
    <string-array name="categories">
        <item>Air sports</item>
        <item>Archery</item>
        <item>Ball-over-net games</item>
        <item>Basketball family</item>
        <item>Bat-and-ball</item>
        <item>Acro sports</item>
        <item>Board sports</item>
        <item>Climbing</item>
        <item>Cycling</item>
        <item>Combat sports</item>
        <item>Cue sports</item>
        <item>Equine sports</item>
        <item>Fishing</item>
    </string-array>
    <string name="registration_successful">Check your email to confirm account</string>
    <string name="unexpectedError">Unexpected error occured</string>
    <string name="currentEventsList">Current Events</string>
</resources>
