<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_current_events"
            android:icon="@drawable/ic_event"
            android:title="@string/current_events" />
        <item
            android:id="@+id/nav_memories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/memories" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_editProfile"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/editProfile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
