<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.sportsapp.SignUpActivity">

    <EditText
        android:id="@+id/firsName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintFirstName"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintLastName"
        android:layout_gravity="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:layout_gravity="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:layout_gravity="center"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatedPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintRepeatePassword"
        android:layout_gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sighIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onClickButtonSignUp" />

</LinearLayout>
