<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.hfad.sportsapp.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@mipmap/logo"
        android:contentDescription="@string/descriptionLogo"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:layout_gravity="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:layout_gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sighIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonSignIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onClickButtonSignIn" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonSignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClickButtonSignUp" />
</LinearLayout>
